made the api ready for production and fixed token limit error

--- a/bentofile.yaml
+++ b/bentofile.yaml
@@ -1,6 +1,10 @@
-service: 'service.py:svc'
+service: 'service.py:prompt_svc'
 labels:
-  owner: bentoml-team
+  owner: zenno
+  stage: dev
   project: zennoai
 include:
-- "*.py"
+  - "*.py"
+  - ".env"
+python:
+  requirements_txt: "./requirements.txt"
