--- a/bento_config.yaml
+++ b/bento_config.yaml
@@ -1,15 +1,14 @@
-version: 1.0  
 api_server:
   http:
     port: 3000
     cors:
       enabled: true
-      access_control_allow_origins: ["*"]
+      access_control_allow_origins: "*"
       access_control_allow_methods: ["GET", "OPTIONS", "POST", "HEAD", "PUT"]
       access_control_allow_credentials: true
-      access_control_allow_headers: ["*"]
-      access_control_allow_origin_regex: 'https://.*\.my_org\.com'
-      access_control_max_age: 1200
+      access_control_allow_headers: "*"
+      access_control_allow_origin_regex: Null
+      access_control_max_age: Null
       access_control_expose_headers: ["Content-Length"]
   ssl:
     enabled: true
