--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ on:
   push:
     paths:
       - 'deployment.json'
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,7 +15,7 @@ jobs:
       - uses: bentoml/setup-bentoml-action@v1
         with:
           python-version: "3.11"
-          bentoml-version: ${{ inputs.bentoml_version }}
+          bentoml-version: '1.1.8'
       - name: Login to Bento Cloud
         shell: bash
         run: |
