--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python_version: '3.11'
           cache: 'pip'
       - uses: bentoml/setup-bentoml-action@v1
         with:
-          python-version: "3.11"
-          bentoml-version: '1.1.8'
+          python_version: "3.11"
+          bentoml_version: '1.1.8'
       - name: Login to Bento Cloud
         shell: bash
         run: |
