--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ asgiref==3.7.2
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.1.0
-bentoml==1.1.8
+bentoml==1.1.11
 bitsandbytes==0.41.1
 blinker==1.7.0
 build==1.0.3
@@ -23,6 +23,7 @@ click==8.1.7
 click-option-group==0.5.6
 cloudpickle==3.0.0
 coloredlogs==15.0.1
+comm==0.2.1
 contextlib2==21.6.0
 dataclasses-json==0.6.1
 datasets==2.14.6
@@ -32,7 +33,9 @@ Deprecated==1.2.14
 dill==0.3.7
 distro==1.8.0
 dnspython==2.4.2
+evaluate==0.4.1
 executing==2.0.1
+faiss-cpu==1.7.4
 fastcore==1.5.29
 filelock==3.13.1
 filetype==1.2.0
@@ -51,13 +54,17 @@ idna==3.4
 importlib-metadata==6.8.0
 inflection==0.5.1
 ipython==8.17.2
+ipywidgets==8.1.1
 jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.19.2
 jsonschema-specifications==2023.11.1
+jupyterlab-widgets==3.0.9
 langchain==0.0.331
+langkit==0.0.28
 langsmith==0.0.59
 loguru==0.7.2
 markdown-it-py==3.0.0
@@ -70,7 +77,9 @@ multidict==6.0.4
 multiprocess==0.70.15
 mypy-extensions==1.0.0
 networkx==3.2.1
+nltk==3.8.1
 numpy==1.26.1
+nvidia-ml-py==11.525.150
 openai==0.28.1
 openllm-client==0.3.14
 openllm-core==0.3.14
@@ -92,6 +101,7 @@ Pillow==10.1.0
 pinecone-client==2.2.4
 pip-requirements-parser==32.0.1
 pip-tools==7.3.0
+platformdirs==3.11.0
 prometheus-client==0.18.0
 prompt-toolkit==3.0.41
 protobuf==4.25.0
@@ -105,6 +115,7 @@ pydeck==0.8.1b0
 Pygments==2.16.1
 pynvml==11.5.0
 pyparsing==3.1.1
+pyphen==0.14.0
 pyproject_hooks==1.0.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -116,10 +127,14 @@ pyzmq==25.1.1
 referencing==0.31.0
 regex==2023.10.3
 requests==2.31.0
+responses==0.18.0
 rich==13.6.0
 rpds-py==0.12.0
 safetensors==0.4.0
 schema==0.7.5
+scikit-learn==1.3.2
+scipy==1.11.4
+sentence-transformers==2.2.2
 sentencepiece==0.1.99
 simple-di==0.1.5
 six==1.16.0
@@ -131,15 +146,19 @@ starlette==0.32.0.post1
 sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.3
+textstat==0.7.3
+threadpoolctl==3.2.0
 tiktoken==0.5.1
 tokenizers==0.14.1
 toml==0.10.2
 toolz==0.12.0
-torch==2.1.0
+torch==2.1.2
+torchvision==0.16.2
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.13.0
 transformers==4.35.0
+types-requests==2.31.0.20240106
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
@@ -149,6 +168,10 @@ uvicorn==0.24.0.post1
 validators==0.22.0
 watchfiles==0.21.0
 wcwidth==0.2.9
+whylabs-client==0.5.10
+whylogs==1.3.20
+whylogs-sketching==3.4.1.dev3
+widgetsnbextension==4.0.9
 wrapt==1.15.0
 xxhash==3.4.1
 yarl==1.9.2
