added model tag

--- a/bentofile.yaml
+++ b/bentofile.yaml
@@ -8,5 +8,7 @@ include:
   - "*.py"
   - ".env"
   - "/config"
+models:
+  - tag: "iris_clf:version1
 python:
   requirements_txt: "./requirements.txt"
