fixed parsing error yml file

--- a/bentofile.yaml
+++ b/bentofile.yaml
@@ -9,6 +9,6 @@ include:
   - ".env"
   - "/config"
 models:
-  - tag: "iris_clf:version1
+  - tag: "iris_clf:version1"
 python:
   requirements_txt: "./requirements.txt"
