--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,119 @@
-accelerate==0.24.1
 aiohttp==3.8.6
+aiohttp-cors==0.7.0
+aiorwlock==1.3.0
 aiosignal==1.3.1
-altair==5.1.2
+altair==5.1.1
 annotated-types==0.6.0
 anyio==3.7.1
 appdirs==1.4.4
-appnope==0.1.3
+appnope @ file:///Users/cbousseau/work/recipes/ci_py311/appnope_1677917710869/work
 asgiref==3.7.2
-asttokens==2.4.1
+asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
 async-timeout==4.0.3
 attrs==23.1.0
-bentoml==1.1.11
-bitsandbytes==0.41.1
-blinker==1.7.0
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+bentoml==1.2.2
+blessed==1.20.0
+blinker==1.6.2
+blis==0.7.11
+boltons @ file:///Users/cbousseau/work/recipes/ci_py311/boltons_1677965141748/work
+Bottleneck @ file:///Users/cbousseau/work/recipes/ci_py311/bottleneck_1677925122241/work
+brotlipy==0.7.0
 build==1.0.3
-cachetools==5.3.2
+cachetools==5.3.1
+catalogue==2.0.10
 cattrs==23.1.2
-certifi==2023.7.22
-charset-normalizer==3.3.2
+certifi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3bweqb8byn/croot/certifi_1690232244779/work/certifi
+cffi @ file:///Users/cbousseau/work/recipes/ci_py311/cffi_1677903595907/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
 circus==0.18.0
-click==8.1.7
+click @ file:///Users/cbousseau/work/recipes/ci_py311/click_1677920889666/work
 click-option-group==0.5.6
-cloudpickle==3.0.0
-coloredlogs==15.0.1
-comm==0.2.1
+cloudpathlib==0.16.0
+cloudpickle @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_da31odypvn/croot/cloudpickle_1683040013858/work
+colorful==0.5.5
+conda @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_e0e3vbtks7/croot/conda_1696257481969/work
+conda-content-trust @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_5324skqvu9/croot/conda-content-trust_1693490622873/work
+conda-package-handling @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_fc4cx8vjhj/croot/conda-package-handling_1690999937094/work
+conda_package_streaming @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_aecpaup22q/croot/conda-package-streaming_1690987978274/work
+confection==0.1.3
 contextlib2==21.6.0
+contourpy @ file:///Users/cbousseau/work/recipes/ci_py311/contourpy_1677925208456/work
+cryptography @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_905z2r5rpq/croot/cryptography_1694211573866/work
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+cymem==2.0.8
 dataclasses-json==0.6.1
-datasets==2.14.6
-decorator==5.1.1
-deepmerge==1.1.0
+debugpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_563_nwtkoc/croot/debugpy_1690905063850/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+deepmerge==1.1.1
 Deprecated==1.2.14
-dill==0.3.7
-distro==1.8.0
-dnspython==2.4.2
-evaluate==0.4.1
-executing==2.0.1
-faiss-cpu==1.7.4
-fastcore==1.5.29
+distlib==0.3.8
+distro==1.9.0
+entrypoints @ file:///Users/cbousseau/work/recipes/ci_py311/entrypoints_1677911798787/work
+et-xmlfile==1.1.0
+executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+Farama-Notifications @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_fbq8w_ofs2/croot/farama-notifications_1683058806943/work
+fastapi==0.108.0
 filelock==3.13.1
-filetype==1.2.0
+fonttools==4.25.0
 frozenlist==1.4.0
 fs==2.4.16
-fsspec==2023.10.0
-ghapi==1.0.4
-gitdb==4.0.11
-GitPython==3.1.40
+fsspec==2023.12.2
+gitdb==4.0.10
+GitPython==3.1.37
+google-api-core==2.15.0
+google-auth==2.25.2
+googleapis-common-protos==1.62.0
+gpustat==1.1.1
+greenlet==3.0.0
+grpcio==1.60.0
+gymnasium @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_0eo82ubhkj/croot/gymnasium-split_1683292855736/work
 h11==0.14.0
-httpcore==1.0.1
-httpx==0.25.1
-huggingface-hub==0.17.3
-humanfriendly==10.0
-idna==3.4
-importlib-metadata==6.8.0
+httpcore==1.0.3
+httpx==0.26.0
+idna @ file:///Users/cbousseau/work/recipes/ci_py311/idna_1677906072337/work
+imbalanced-learn @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_26_yvb9nba/croot/imbalanced-learn_1685020915768/work
+importlib-metadata==6.11.0
 inflection==0.5.1
-ipython==8.17.2
-ipywidgets==8.1.1
-jedi==0.19.1
+ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1655369698656/work
+ipython @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_6599f73fa7/croot/ipython_1694181355402/work
+jax-jumpy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_2bm1cbsm_5/croot/jax-jumpy_1683230557841/work
+jedi @ file:///Users/cbousseau/work/recipes/ci_py311_2/jedi_1678994967789/work
 Jinja2==3.1.2
-joblib==1.3.2
+joblib @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_a357ltg47g/croot/joblib_1685113093574/work
 jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==4.19.2
-jsonschema-specifications==2023.11.1
-jupyterlab-widgets==3.0.9
-langchain==0.0.331
-langkit==0.0.28
-langsmith==0.0.59
-loguru==0.7.2
+jsonpointer==2.1
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1654730843242/work
+jupyter_core @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_d1sy1hlz9t/croot/jupyter_core_1679906585151/work
+kiwisolver @ file:///Users/cbousseau/work/recipes/ci_py311/kiwisolver_1677925326358/work
+langchain==0.1.7
+langchain-community==0.0.20
+langchain-core==0.1.23
+langchain-openai==0.0.6
+langcodes==3.3.0
+langsmith==0.0.87
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
-matplotlib-inline==0.1.6
+matplotlib @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_a23xd3m8b1/croot/matplotlib-suite_1693812470272/work
+matplotlib-inline @ file:///Users/cbousseau/work/recipes/ci_py311/matplotlib-inline_1677918241899/work
 mdurl==0.1.2
-mpmath==1.3.0
+msgpack==1.0.7
 multidict==6.0.4
-multiprocess==0.70.15
+munkres==1.1.4
+murmurhash==1.0.10
 mypy-extensions==1.0.0
-networkx==3.2.1
-nltk==3.8.1
-numpy==1.26.1
+nest-asyncio @ file:///Users/cbousseau/work/recipes/ci_py311/nest-asyncio_1677912430289/work
+nltk @ file:///opt/conda/conda-bld/nltk_1645628263994/work
+numexpr @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_45yefq0kt6/croot/numexpr_1696515289183/work
+numpy @ file:///Users/cbousseau/work/recipes/ci_py311/numpy_and_numpy_base_1677921358445/work
 nvidia-ml-py==11.525.150
-openai==0.28.1
-openllm-client==0.3.14
-openllm-core==0.3.14
+openai==1.12.0
+opencensus==0.11.3
+opencensus-context==0.1.3
+openpyxl==3.0.10
 opentelemetry-api==1.20.0
 opentelemetry-instrumentation==0.41b0
 opentelemetry-instrumentation-aiohttp-client==0.41b0
@@ -90,89 +121,97 @@ opentelemetry-instrumentation-asgi==0.41b0
 opentelemetry-sdk==1.20.0
 opentelemetry-semantic-conventions==0.41b0
 opentelemetry-util-http==0.41b0
-optimum==1.14.0
-orjson==3.9.10
 packaging==23.2
-pandas==2.1.2
-parso==0.8.3
-pathspec==0.11.2
-pexpect==4.8.0
-Pillow==10.1.0
-pinecone-client==2.2.4
+pandas @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b9nb2vqtpu/croot/pandas_1692289331806/work
+parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+pathspec==0.12.1
+patsy==0.5.3
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==9.4.0
 pip-requirements-parser==32.0.1
 pip-tools==7.3.0
-platformdirs==3.11.0
-prometheus-client==0.18.0
-prompt-toolkit==3.0.41
-protobuf==4.25.0
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==14.0.0
+platformdirs @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a8u4fy8k9o/croot/platformdirs_1692205661656/work
+pluggy @ file:///Users/cbousseau/work/recipes/ci_py311/pluggy_1677906980825/work
+preshed==3.0.9
+prometheus-client==0.19.0
+prompt-toolkit @ file:///Users/cbousseau/work/recipes/ci_py311/prompt-toolkit_1677918689663/work
+protobuf==4.24.3
+psutil @ file:///Users/cbousseau/work/recipes/ci_py311_2/psutil_1678995687212/work
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+py-spy==0.3.14
+pyarrow==13.0.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycosat @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3eg8vdcs6z/croot/pycosat_1696536519213/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
 pydantic==1.10.13
 pydantic_core==2.10.1
 pydeck==0.8.1b0
-Pygments==2.16.1
-pynvml==11.5.0
-pyparsing==3.1.1
-pyphen==0.14.0
+pyee==11.0.1
+Pygments @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_29bs9f_dh9/croot/pygments_1684279974747/work
+pyOpenSSL @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_b8whqav6qm/croot/pyopenssl_1690223428943/work
+pyparsing @ file:///Users/cbousseau/work/recipes/ci_py311/pyparsing_1677910832141/work
 pyproject_hooks==1.0.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
+PySocks @ file:///Users/cbousseau/work/recipes/ci_py311/pysocks_1677906386870/work
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 python-json-logger==2.0.7
-python-multipart==0.0.6
-pytz==2023.3.post1
+python-multipart==0.0.9
+pytz @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_6btwyyj8a1/croot/pytz_1695131592184/work
 PyYAML==6.0.1
-pyzmq==25.1.1
-referencing==0.31.0
-regex==2023.10.3
-requests==2.31.0
-responses==0.18.0
-rich==13.6.0
-rpds-py==0.12.0
-safetensors==0.4.0
+pyzmq @ file:///Users/cbousseau/work/recipes/ci_py311/pyzmq_1677912759914/work
+ray==2.7.0
+referencing==0.32.0
+regex @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_c10w1rynu_/croot/regex_1696515309790/work
+requests @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_54zi68h2nb/croot/requests_1690400233316/work
+rich==13.5.3
+rpds-py==0.16.2
+rsa==4.9
+ruamel.yaml @ file:///Users/cbousseau/work/recipes/ci_py311/ruamel.yaml_1677934845850/work
 schema==0.7.5
-scikit-learn==1.3.2
-scipy==1.11.4
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
+scikit-learn @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_75x_mwrnoj/croot/scikit-learn_1690978919744/work
+scipy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_1b7r8zpma8/croot/scipy_1696543295098/work/dist/scipy-1.11.3-cp311-cp311-macosx_11_0_arm64.whl#sha256=73b819f2982eac97eeb9ece9fd252443b485f2a9c40f7dab1d0dd6d7d00a757b
+seaborn @ file:///Users/cbousseau/work/recipes/ci_py311/seaborn_1677961968762/work
 simple-di==0.1.5
-six==1.16.0
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+smart-open==6.4.0
 smmap==5.0.1
 sniffio==1.3.0
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.23
-stack-data==0.6.3
+srsly==2.4.8
+stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
 starlette==0.32.0.post1
-sympy==1.12
-tabulate==0.9.0
+statsmodels @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_d39rlzrllo/croot/statsmodels_1689937269798/work
 tenacity==8.2.3
-textstat==0.7.3
-threadpoolctl==3.2.0
-tiktoken==0.5.1
-tokenizers==0.14.1
+tensorboardX==2.6.2.2
+thinc==8.2.1
+threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
+tika==2.6.0
+tiktoken==0.6.0
 toml==0.10.2
-toolz==0.12.0
-torch==2.1.2
-torchvision==0.16.2
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.13.0
-transformers==4.35.0
-types-requests==2.31.0.20240106
+tornado @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_28d93aezp2/croot/tornado_1690848278715/work
+tqdm @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ac7zic_tin/croot/tqdm_1679561870178/work
+traitlets @ file:///Users/cbousseau/work/recipes/ci_py311/traitlets_1677911650502/work
+truststore @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_42mm7e6j06/croot/truststore_1695244298716/work
+typer==0.9.0
 typing-inspect==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-tzlocal==5.2
-urllib3==2.0.7
-uvicorn==0.24.0.post1
+typing_extensions==4.9.0
+tzdata @ file:///croot/python-tzdata_1690578112552/work
+tzlocal==5.0.1
+urllib3 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_e9usuw__8i/croot/urllib3_1686166332689/work
+uvicorn==0.25.0
 validators==0.22.0
+virtualenv==20.21.0
+wasabi==1.1.2
 watchfiles==0.21.0
-wcwidth==0.2.9
-whylabs-client==0.5.10
-whylogs==1.3.20
-whylogs-sketching==3.4.1.dev3
-widgetsnbextension==4.0.9
-wrapt==1.15.0
-xxhash==3.4.1
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+weasel==0.3.3
+wrapt==1.16.0
+xgboost==1.7.3
 yarl==1.9.2
 zipp==3.17.0
+zstandard @ file:///Users/cbousseau/work/recipes/ci_py311_2/zstandard_1678996192313/work
