--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ click-option-group==0.5.6
 cloudpathlib==0.16.0
 cloudpickle==2.2.1
 colorful==0.5.5
+comm==0.2.1
 conda==23.9.0
 conda-content-trust==0.2.0
 conda-package-handling==2.2.0
@@ -43,14 +44,17 @@ cryptography==41.0.3
 cycler==0.11.0
 cymem==2.0.8
 dataclasses-json==0.6.1
+datasets==2.17.1
 debugpy==1.6.7
 decorator==5.1.1
 deepmerge==1.1.1
 Deprecated==1.2.14
+dill==0.3.8
 distlib==0.3.8
 distro==1.9.0
 entrypoints==0.4
 et-xmlfile==1.1.0
+evaluate==0.4.1
 executing==0.8.3
 Farama-Notifications==0.0.4
 fastapi==0.108.0
@@ -58,7 +62,7 @@ filelock==3.13.1
 fonttools==4.25.0
 frozenlist==1.4.0
 fs==2.4.16
-fsspec==2023.12.2
+fsspec==2023.10.0
 gitdb==4.0.10
 GitPython==3.1.37
 google-api-core==2.15.0
@@ -69,14 +73,17 @@ greenlet==3.0.0
 grpcio==1.60.0
 gymnasium==0.28.1
 h11==0.14.0
+h5py==3.10.0
 httpcore==1.0.3
 httpx==0.26.0
+huggingface-hub==0.20.3
 idna==3.4
 imbalanced-learn==0.10.1
 importlib-metadata==6.11.0
 inflection==0.5.1
 ipykernel==6.15.0
 ipython==8.15.0
+ipywidgets==8.1.2
 jax-jumpy==1.0.0
 jedi==0.18.1
 Jinja2==3.1.2
@@ -87,26 +94,32 @@ jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
 jupyter-client==7.3.4
 jupyter_core==5.3.0
+jupyterlab_widgets==3.0.10
 kiwisolver==1.4.4
 langchain==0.1.7
-langchain-community==0.0.20
-langchain-core==0.1.23
+langchain-community==0.0.21
+langchain-core==0.1.25
 langchain-openai==0.0.6
+langchain-pinecone==0.0.2
 langcodes==3.3.0
-langsmith==0.0.87
+langkit==0.0.30
+langsmith==0.1.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
+mpmath==1.3.0
 msgpack==1.0.7
 multidict==6.0.4
+multiprocess==0.70.16
 munkres==1.1.4
 murmurhash==1.0.10
 mypy-extensions==1.0.0
 nest-asyncio==1.5.6
-nltk==3.7
+networkx==3.2.1
+nltk==3.8.1
 numexpr==2.8.7
 numpy==1.23.5
 nvidia-ml-py==11.525.150
@@ -127,14 +140,17 @@ parso==0.8.3
 pathspec==0.12.1
 patsy==0.5.3
 pexpect==4.8.0
+phonenumbers==8.13.30
 pickleshare==0.7.5
 Pillow==9.4.0
-pip==23.2.1
+pinecone-client==3.0.3
+pip==24.0
 pip-requirements-parser==32.0.1
 pip-tools==7.3.0
 platformdirs==3.10.0
 pluggy==1.0.0
 preshed==3.0.9
+presidio-analyzer==2.2.353
 prometheus-client==0.19.0
 prompt-toolkit==3.0.36
 protobuf==4.24.3
@@ -143,6 +159,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 py-spy==0.3.14
 pyarrow==13.0.0
+pyarrow-hotfix==0.6
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycosat==0.6.6
@@ -154,9 +171,11 @@ pyee==11.0.1
 Pygments==2.15.1
 pyOpenSSL==23.2.0
 pyparsing==3.0.9
+pyphen==0.14.0
 pyproject_hooks==1.0.0
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 python-multipart==0.0.9
 pytz==2023.3.post1
@@ -166,14 +185,19 @@ ray==2.7.0
 referencing==0.32.0
 regex==2023.10.3
 requests==2.31.0
+requests-file==2.0.0
+responses==0.18.0
 rich==13.5.3
 rpds-py==0.16.2
 rsa==4.9
 ruamel.yaml==0.17.21
+safetensors==0.4.2
 schema==0.7.5
 scikit-learn==1.3.0
 scipy==1.11.3
 seaborn==0.12.2
+sentence-transformers==2.3.1
+sentencepiece==0.2.0
 setuptools==68.0.0
 simple-di==0.1.5
 six==1.16.0
@@ -188,24 +212,33 @@ srsly==2.4.8
 stack-data==0.2.0
 starlette==0.32.0.post1
 statsmodels==0.14.0
+sympy==1.12
 tenacity==8.2.3
 tensorboardX==2.6.2.2
+textstat==0.7.3
 thinc==8.2.1
 threadpoolctl==2.2.0
 tika==2.6.0
 tiktoken==0.6.0
+tldextract==5.1.1
+tokenizers==0.15.2
 toml==0.10.2
+toolz==0.12.1
+torch==2.2.0
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.7.1
+transformers==4.38.0
 truststore==0.8.0
 typer==0.9.0
+types-requests==2.31.0.20240218
 typing_extensions==4.9.0
 typing-inspect==0.9.0
 tzdata==2023.3
 tzlocal==5.0.1
-urllib3==1.26.16
+urllib3==2.2.1
 uvicorn==0.25.0
+vaderSentiment==3.3.2
 validators==0.22.0
 virtualenv==20.21.0
 wasabi==1.1.2
@@ -213,8 +246,13 @@ watchfiles==0.21.0
 wcwidth==0.2.5
 weasel==0.3.3
 wheel==0.35.1
+whylabs-client==0.5.10
+whylogs==1.3.24
+whylogs-sketching==3.4.1.dev3
+widgetsnbextension==4.0.10
 wrapt==1.16.0
 xgboost==1.7.3
+xxhash==3.4.1
 yarl==1.9.2
 zipp==3.17.0
 zstandard==0.19.0
