--- a/requirements.txt
+++ b/requirements.txt
@@ -6,42 +6,44 @@ altair==5.1.1
 annotated-types==0.6.0
 anyio==3.7.1
 appdirs==1.4.4
-appnope==0.1.2
+appnope==0.1.4
+archspec==0.2.2
 asgiref==3.7.2
-asttokens==2.0.5
+asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.1.0
-backcall==0.2.0
 bentoml==1.2.2
 blessed==1.20.0
 blinker==1.6.2
 blis==0.7.11
-boltons==23.0.0
-Bottleneck==1.3.5
-brotlipy==0.7.0
+boltons==23.1.1
+Bottleneck==1.3.7
+Brotli==1.0.9
 build==1.0.3
 cachetools==5.3.1
 catalogue==2.0.10
 cattrs==23.1.2
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==2.0.4
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
 circus==0.18.0
-click==8.0.4
+click==8.1.7
 click-option-group==0.5.6
 cloudpathlib==0.16.0
-cloudpickle==2.2.1
+cloudpickle==3.0.0
+colorama==0.4.6
 colorful==0.5.5
 comm==0.2.1
-conda==23.9.0
+conda==24.1.2
 conda-content-trust==0.2.0
+conda-libmamba-solver==24.1.0
 conda-package-handling==2.2.0
 conda_package_streaming==0.9.0
 confection==0.1.3
 contextlib2==21.6.0
-contourpy==1.0.5
-cryptography==41.0.3
-cycler==0.11.0
+contourpy==1.2.0
+cryptography==42.0.2
+cycler==0.12.1
 cymem==2.0.8
 dataclasses-json==0.6.1
 datasets==2.17.1
@@ -55,7 +57,8 @@ distro==1.9.0
 entrypoints==0.4
 et-xmlfile==1.1.0
 evaluate==0.4.1
-executing==0.8.3
+exceptiongroup==1.2.0
+executing==2.0.1
 Farama-Notifications==0.0.4
 fastapi==0.108.0
 filelock==3.13.1
@@ -77,23 +80,23 @@ h5py==3.10.0
 httpcore==1.0.3
 httpx==0.26.0
 huggingface-hub==0.20.3
-idna==3.4
+idna==3.6
 imbalanced-learn==0.10.1
 importlib-metadata==6.11.0
 inflection==0.5.1
 ipykernel==6.15.0
-ipython==8.15.0
+ipython==8.21.0
 ipywidgets==8.1.2
 jax-jumpy==1.0.0
-jedi==0.18.1
+jedi==0.19.1
 Jinja2==3.1.2
-joblib==1.2.0
+joblib==1.3.2
 jsonpatch==1.33
-jsonpointer==2.1
+jsonpointer==2.0
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
 jupyter-client==7.3.4
-jupyter_core==5.3.0
+jupyter_core==5.5.0
 jupyterlab_widgets==3.0.10
 kiwisolver==1.4.4
 langchain==0.1.7
@@ -104,12 +107,14 @@ langchain-pinecone==0.0.2
 langcodes==3.3.0
 langkit==0.0.30
 langsmith==0.1.5
+libmambapy==1.5.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
+menuinst==2.0.2
 mpmath==1.3.0
 msgpack==1.0.7
 multidict==6.0.4
@@ -117,7 +122,7 @@ multiprocess==0.70.16
 munkres==1.1.4
 murmurhash==1.0.10
 mypy-extensions==1.0.0
-nest-asyncio==1.5.6
+nest_asyncio==1.6.0
 networkx==3.2.1
 nltk==3.8.1
 numexpr==2.8.7
@@ -138,8 +143,8 @@ packaging==23.2
 pandas==2.0.3
 parso==0.8.3
 pathspec==0.12.1
-patsy==0.5.3
-pexpect==4.8.0
+patsy==0.5.6
+pexpect==4.9.0
 phonenumbers==8.13.30
 pickleshare==0.7.5
 Pillow==9.4.0
@@ -147,12 +152,12 @@ pinecone-client==3.0.3
 pip==24.0
 pip-requirements-parser==32.0.1
 pip-tools==7.3.0
-platformdirs==3.10.0
-pluggy==1.0.0
+platformdirs==4.2.0
+pluggy==1.4.0
 preshed==3.0.9
 presidio-analyzer==2.2.353
 prometheus-client==0.19.0
-prompt-toolkit==3.0.36
+prompt-toolkit==3.0.42
 protobuf==4.24.3
 psutil==5.9.0
 ptyprocess==0.7.0
@@ -168,9 +173,8 @@ pydantic==1.10.13
 pydantic_core==2.10.1
 pydeck==0.8.1b0
 pyee==11.0.1
-Pygments==2.15.1
-pyOpenSSL==23.2.0
-pyparsing==3.0.9
+Pygments==2.17.2
+pyparsing==2.4.7
 pyphen==0.14.0
 pyproject_hooks==1.0.0
 PySocks==1.7.1
@@ -178,7 +182,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-json-logger==2.0.7
 python-multipart==0.0.9
-pytz==2023.3.post1
+pytz==2024.1
 PyYAML==6.0.1
 pyzmq==23.2.0
 ray==2.7.0
@@ -194,7 +198,7 @@ ruamel.yaml==0.17.21
 safetensors==0.4.2
 schema==0.7.5
 scikit-learn==1.3.0
-scipy==1.11.3
+scipy==1.11.4
 seaborn==0.12.2
 sentence-transformers==2.3.1
 sentencepiece==0.2.0
@@ -209,7 +213,7 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.23
 srsly==2.4.8
-stack-data==0.2.0
+stack-data==0.6.2
 starlette==0.32.0.post1
 statsmodels==0.14.0
 sympy==1.12
@@ -217,7 +221,7 @@ tenacity==8.2.3
 tensorboardX==2.6.2.2
 textstat==0.7.3
 thinc==8.2.1
-threadpoolctl==2.2.0
+threadpoolctl==3.3.0
 tika==2.6.0
 tiktoken==0.6.0
 tldextract==5.1.1
@@ -225,16 +229,16 @@ tokenizers==0.15.2
 toml==0.10.2
 toolz==0.12.1
 torch==2.2.0
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.7.1
+tornado==6.3.3
+tqdm==4.66.2
+traitlets==5.14.1
 transformers==4.38.0
 truststore==0.8.0
 typer==0.9.0
 types-requests==2.31.0.20240218
 typing_extensions==4.9.0
 typing-inspect==0.9.0
-tzdata==2023.3
+tzdata==2024.1
 tzlocal==5.0.1
 urllib3==2.2.1
 uvicorn==0.25.0
@@ -243,7 +247,7 @@ validators==0.22.0
 virtualenv==20.21.0
 wasabi==1.1.2
 watchfiles==0.21.0
-wcwidth==0.2.5
+wcwidth==0.2.13
 weasel==0.3.3
 wheel==0.35.1
 whylabs-client==0.5.10
