--- a/requirements.txt
+++ b/requirements.txt
@@ -161,7 +161,7 @@ mkdocs==1.4.2
 mkdocs-autorefs==0.5.0
 mkdocstrings==0.21.2
 mkdocstrings-python==1.7.5
-mlflow==2.3.1
+mlflow==2.10.2
 mpmath==1.3.0
 msgpack==1.0.7
 multidict==6.0.4
@@ -220,7 +220,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 py-spy==0.3.14
 py4j==0.10.9.7
-pyarrow>=15.0.0
+pyarrow==15.0.0
 pyarrow-hotfix==0.6
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
